test/files/neg/plugin-multiple-rafter/lib/plugins.jar.desired.sha1
3be489ca675f18a64e0af8f5c7efcbe0f7cae2ab ?plugins.jar
